<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data class="RegBinding">

        <variable
            name="vm"
            type="ru.itbirds.trades.viewmodels.RegViewModel" />

        <import
            alias="V"
            type="android.view.View" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"

        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <androidx.appcompat.widget.Toolbar

                android:id="@+id/toolbar"
                style="@style/Toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize">


            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.AppBarLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/chart_background">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/name_reg_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/first_et_margin"
                android:layout_marginEnd="@dimen/et_margin"

                android:textColorHint="@color/gray_light">

                <com.google.android.material.textfield.TextInputEditText
                    android:enabled="@{vm.progress != true}"
                    android:id="@+id/name_reg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    android:maxLength="@integer/et_max_len_name"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    android:textSize="@dimen/login_text_size" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/login_reg_layout"
                android:layout_below="@id/name_reg_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginEnd="@dimen/et_margin"

                android:textColorHint="@color/gray_light">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/login_reg"
                    android:enabled="@{vm.progress != true}"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:maxLength="@integer/et_max_len"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    android:textSize="@dimen/login_text_size" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_password_toggle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/login_reg_layout"
                android:layout_centerHorizontal="true"
                android:layout_marginEnd="@dimen/et_margin"

                android:textColorHint="@color/gray_light"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:enabled="@{vm.progress != true}"
                    android:id="@+id/password_reg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:maxLength="@integer/et_max_len"
                    android:singleLine="true"
                    android:textColor="@color/white"

                    android:textSize="@dimen/login_text_size" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_password_again_toggle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_input_password_toggle"
                android:layout_centerHorizontal="true"
                android:layout_marginEnd="@dimen/et_margin"

                android:textColorHint="@color/gray_light"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:enabled="@{vm.progress != true}"
                    android:id="@+id/password_reg_again"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password_again"
                    android:inputType="textPassword"
                    android:maxLength="@integer/et_max_len"
                    android:singleLine="true"
                    android:textColor="@color/white"

                    android:textSize="@dimen/login_text_size" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_registration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_input_password_again_toggle"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/sing_btn_margin_top"
                android:layout_marginEnd="@dimen/et_margin"
                android:backgroundTint="@color/colorAccent"
                android:enabled="@{vm.progress != true}"
                android:text="@string/sing_up"
                android:textColor="@color/white" />

            <ProgressBar
                android:layout_width="@dimen/progbar_width"
                android:layout_height="@dimen/progbar_height"
                android:layout_below="@id/btn_registration"
                android:layout_centerInParent="true"
                android:layout_marginTop="@dimen/et_margin"
                android:visibility="@{(vm.progress == true)? V.VISIBLE: V.GONE}" />
        </RelativeLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>